--- a/web/src/app/components/channel-table/channel-table.html
+++ b/web/src/app/components/channel-table/channel-table.html
@@ -22,7 +22,11 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef i18n="@@name">Name</th>
-    <td mat-cell *matCellDef="let row" lang="jp">{{ row.vtuberId | name }}</td>
+    <td mat-cell *matCellDef="let row" lang="jp">
+      <a class="channel-link" href="/vtuber/{{ row.vtuberId }}">
+        {{ row.vtuberId | name }}
+      </a>
+    </td>
     <td mat-footer-cell *matFooterCellDef i18n="@@total">Total</td>
   </ng-container>
 
